Fix issue where quiz's old answers would flicker on the screen before a new question loaded

--- a/app/assets/stylesheets/styles/quiz.css
+++ b/app/assets/stylesheets/styles/quiz.css
@@ -41,6 +41,12 @@
   border: 4px solid rgb(150, 155, 149);
 }
 
+.quiz-questions-fader {
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.2s;
+}
+
 .quiz-questions-box h1 {
   font-size: 24px;
   color: rgb(104, 104, 104);
